// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - deposit empty vault: no assets & no shares deposit 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 89533,
}
`;

exports[`EthVault - deposit full vault: assets & shares deposit 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 72622,
}
`;

exports[`EthVault - deposit full vault: assets & shares update state and deposit 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 188802,
}
`;

exports[`EthVault - deposit partially empty vault: assets & no shares deposit 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 72499,
}
`;
